<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/noWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/no_wifi" />

    <TextView
        android:id="@+id/no_internet_main_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/network_connection_error"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/no_internet_sub_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_connect_to_a_network_and_retry"
        android:textAppearance="?android:textAppearanceMedium"/>

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/retry"
        android:textColor="@color/teal_200"
        style="?android:borderlessButtonStyle"/>

</LinearLayout>