<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootView"
    tools:context=".DayWhetherData"
    tools:background="@color/teal_200">

    <FrameLayout
        android:id="@+id/CurrentDayWhether"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        tools:background="@color/teal_200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/CurrentDayDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Today, 13 June" />

            <ImageView
                android:id="@+id/CurrentDayWhetherState"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/CurrentDayMaxTemp"
                app:layout_constraintEnd_toStartOf="@+id/CurrentDayMaxTemp"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CurrentDayDate"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="0.5"
                tools:srcCompat="@drawable/thunderstrom128" />

            <TextView
                android:id="@+id/CurrentDayMaxTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|left|center_vertical"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="64sp"
                app:layout_constraintBottom_toTopOf="@id/CurrentDayWhetherStateData"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toEndOf="@+id/CurrentDayWhetherState"
                app:layout_constraintTop_toTopOf="@+id/CurrentDayWhetherState"
                tools:text="18°" />

            <TextView
                android:id="@+id/CurrentDayWhetherStateData"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal|top"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/CurrentDayMinTemp"
                app:layout_constraintEnd_toStartOf="@+id/CurrentDayMinTemp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CurrentDayWhetherState"
                tools:text="Thunderstrom" />

            <TextView
                android:id="@+id/CurrentDayMinTemp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="start|top|left"
                android:paddingLeft="32dp"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toEndOf="@+id/CurrentDayWhetherStateData"
                app:layout_constraintTop_toTopOf="@+id/CurrentDayWhetherStateData"
                tools:text="14"
                android:paddingStart="32dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/CurrentDayWhetherAddInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_wind_speed" />

                <TextView
                    android:id="@+id/windSpeedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/wind_speed"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_wind_direction" />

                <TextView
                    android:id="@+id/windDirectionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/windDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/wind_direction"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_air_pressure" />

                <TextView
                    android:id="@+id/airPressureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/airPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/air_pressure"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/humidity"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_visibility_24" />

                <TextView
                    android:id="@+id/visibilityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/visibility"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_predictable" />

                <TextView
                    android:id="@+id/predictabilityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="68%"/>
                <TextView
                    android:id="@+id/predictability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/predictability"/>
            </LinearLayout>
        </GridLayout>
    </FrameLayout>

</LinearLayout>